# uci_f1tenth_workshop

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  run.py
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflow/: ci.yml  ruff.yml
.github/workflows/: .pre-commit-config.yaml  latex.yml  reviewdog.yml  ruff.yml
bash_files/: launch_f1t_sim.bash  run_AEB.bash  run_sim_keyboard_driving.bash
docs/: compile.sh
docs/Development_Guide/: cover.tex  dissertation.tex  mmp.sty
docs/Development_Guide/Chapter1/: chapter1.tex
docs/Development_Guide/Chapter2/: chapter2.tex
docs/Development_Guide/Chapter3/: chapter3.tex
dreamer_node/: config.py  package.xml  pyproject.toml  setup.cfg  setup.py
dreamer_node/.devcontainer/: devcontainer.json
dreamer_node/agents/: dreamer_agent.py  ros2_agent.py
dreamer_node/dreamer/: check_env_bounds.py  config.py  config.yaml  dream.py  dream_multi.py  exploration.py  make_env.py  models.py  networks 2.py  networks.py  parallel.py  racecar_env.py  racecar_env_multi.py  test_env_pytest.py  tools.py  wrappers 2.py  wrappers.py
dreamer_node/env/: racerenv.py
dreamer_node/environments/: racerenv.py
dreamer_node/tests/: check_env_bounds.py  test_env_pytest.py  test_racecar_env.py  test_racecar_env_pytest.py  test_racerenv.py  test_racerenv_unittest.py
dreamer_node/util/: PID.py  constants.py
dreamer_ros2/: package.xml  setup.cfg  setup.py
dreamer_ros2/dreamer_ros2/: ros2_agent.py
f1tenth_gym_ros/: Dockerfile
f1tenth_gym_ros_files/: Dockerfile  setup.py
gyms/f1tenth_gym_ros/: Dockerfile  docker-compose.yml  setup.py
gyms/racecar_gym/: README.md  pyproject.toml  requirements.txt  setup.py
racecar_gym/: pyproject.toml
racecar_gym/racecar_gym/bullet/: sensors.py
src/dreamer_node/: setup.py
src/ml_node/: package.xml  setup.cfg  setup.py
src/safety_node/: package.xml  setup.py
src/safety_node_foxy/: setup.py
src/safety_node_humble/: package.xml  setup.py
src/wall_follow/: package.xml  setup.py
(+99 files in other folders)
