[project]
name = "uci-f1tenth-workshop"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "racecar-gym",
    "gymnasium>=1.0.0",
]

[tool.uv.sources]
racecar-gym = { workspace = true }

[tool.uv.workspace]
members = ["gyms/racecar_gym", "dreamer_node"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]

