[project]
name = "dreamer-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.3",
    "ruamel-yaml>=0.18.10",
    "torch>=2.6.0",
    "racecar-gym",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
racecar-gym = { workspace = true }